chore: 吸收 PR#1 Studio/Player 架构并按需求规格对齐
- 编译目标 Java 21→17，JavaFX 21.0.5→17.0.20（对齐需求 3.5 与检查项）
- 回归 JUnit 5 + surefire，新增 ScriptParserTest（4 用例全过）
- Java 21 API 降级：Math.clamp→max/min、getFirst()→get(0)
- 恢复 mvnw、docs/ds-adventrue 玩法文档、assets、docs/私人 忽略行
- artifactId 对齐：ds-adventure；README/Changelog 同步版本说明